2021-02-02  Don Olmstead  <don.olmstead@sony.com>

        [webkitpy] WinPort.delete_sem_locks is cygwin specific
        https://bugs.webkit.org/show_bug.cgi?id=221277

        Reviewed by Jonathan Bedard.

        WinPort.delete_sem_locks does `rm -rf /dev/shm/sem.*` which is only relavent when
        running cygwin. Just put a test for cygwin around the command invocation.

        * Scripts/webkitpy/port/win.py:
        (WinPort.delete_sem_locks):

2021-02-02  Alex Christensen  <achristensen@webkit.org>

        Adopt UIEventAttribution instead of _UIEventAttribution
        https://bugs.webkit.org/show_bug.cgi?id=220683

        Reviewed by John Wilander.

        * TestWebKitAPI/Tests/WebKitCocoa/EventAttribution.mm:
        (-[MockEventAttribution initWithReportEndpoint:destinationURL:]):
        (TestWebKitAPI::TEST):
        (-[MockEventAttribution initWithReportEndpoint:attributeOn:]): Deleted.

2021-02-02  Aakash Jain  <aakash_jain@apple.com>

        [build.webkit.org] unzip layout-test-results in background
        https://bugs.webkit.org/show_bug.cgi?id=221263

        Reviewed by Jonathan Bedard.

        * CISupport/build-webkit-org/steps.py:
        (ExtractTestResults.__init__):

2021-02-02  Aakash Jain  <aakash_jain@apple.com>

        ews isn't retrying builds when kill-old-processes fails
        https://bugs.webkit.org/show_bug.cgi?id=221235

        Reviewed by Jonathan Bedard.

        * CISupport/ews-build/steps.py:
        (KillOldProcesses.__init__): Increased timeout to 2 minutes.
        (KillOldProcesses.evaluateCommand): Used rc since self.results is None at this step.
        * CISupport/ews-build/steps_unittest.py: Updated unit-tests.

2021-02-02  Youenn Fablet  <youenn@apple.com>

        Recover WebRTC codecs in case of GPUProcess crash
        https://bugs.webkit.org/show_bug.cgi?id=221138

        Reviewed by Eric Carlson.

        * TestWebKitAPI/Tests/WebKit/GetUserMedia.mm:
        (TestWebKitAPI::TEST):